crates/keron-lang/tests/corpus/errors/check/for_list_with_pair.keron
val xs: List<Int> = [1, 2]

for (k, v) in xs {
  reconcile v
}
